<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_up_background"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studentId"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/name"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:lineSpacingExtra="4dp"
        android:text="@string/aboutText"
        android:textColor="@color/white" />
</LinearLayout>
