<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/image_background"
    tools:ignore="UsingOnClickInXml"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/background"
        android:src="@drawable/dice_back"
        android:contentDescription="@string/backgroundimage" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:layout_margin="50dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        tools:context=".MainActivity">



        <Button
            android:id="@+id/btnNewGame"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:onClick="startNewGame"
            android:padding="15dp"
            android:text="@string/new_game"
            android:textColor="@color/white"
            />

        <Button
            android:layout_marginBottom="60dp"
            android:id="@+id/btnAbout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:onClick="onAboutButtonPressed"
            android:padding="15dp"
            android:text="@string/about"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>

