<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    tools:ignore="UsingOnClickInXml"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H : "
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblHumanWins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / C : "
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblComputerWins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_transparent"
                android:text="@string/rounds_won" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="H : "
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblHumScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / C : "
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lblCompScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_transparent"
                android:text="@string/current_score" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_secondary"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/round" />

        <TextView
            android:id="@+id/lblRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:text="@string/_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/humDie1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/die1"
            android:onClick="toggleSelected"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/humDie2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/die2"
            android:onClick="toggleSelected"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/die1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/humDie3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/die3"
            android:onClick="toggleSelected"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/humDie4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/die4"
            android:onClick="toggleSelected"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/die1" />

        <ImageView
            android:id="@+id/humDie5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="@string/die5"
            android:onClick="toggleSelected"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:srcCompat="@drawable/die1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/player"
        android:textColor="@color/text_transparent"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="?android:attr/listDivider"
        android:foreground="@color/secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnThrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="throwDice"
            android:padding="10dp"
            android:text="@string/throwText"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:rippleColor="@color/secondary"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onScoreButtonPressed"
            android:padding="10dp"
            android:text="@string/score"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:rippleColor="@color/secondary"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="showSettingsDialog"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:rippleColor="@color/secondary" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="?android:attr/listDivider"
        android:foreground="@color/secondary" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/computer"
        android:textColor="@color/text_transparent"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/compDie1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/die1"
            android:contentDescription="@string/die1" />

        <ImageView
            android:id="@+id/compDie2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/die1"
            android:contentDescription="@string/die2" />

        <ImageView
            android:id="@+id/compDie3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/die1"
            android:contentDescription="@string/die3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/compDie4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/die1"
            android:contentDescription="@string/die4" />

        <ImageView
            android:id="@+id/compDie5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            tools:srcCompat="@drawable/die1"
            android:contentDescription="@string/die5" />
    </LinearLayout>

</LinearLayout>